--- a/vars/k8s_cluster.yml
+++ b/vars/k8s_cluster.yml
@@ -1,8 +1,8 @@
 # General configuration
 k8s:
-  cluster_name: k8s-yalim
+  cluster_name: k8s
   cluster_os: Ubuntu
-  cluster_version: "1.24"
+  cluster_version: "1.28"
   container_runtime: crio
   master_schedulable: false
 
@@ -34,7 +34,7 @@ k8s:
 
 # Rook configuration
 rook_ceph:
-  install_rook: false
+  install_rook: true
   volume_size: 50
   rook_cluster_size: 1
 
@@ -50,6 +50,6 @@ ingress_controller:
 # Section for metalLB setup
 
 metallb:
-  install_metallb: false
+  install_metallb: true
   l2:
     iprange: 192.168.200.210-192.168.200.250
