--- a/vars/k8s_cluster.yml
+++ b/vars/k8s_cluster.yml
@@ -5,6 +5,7 @@ k8s:
   cluster_version: "1.28"
   container_runtime: crio
   master_schedulable: false
+  libvirt_pool: pvc1-1
 
 # Nodes configuration
 
@@ -15,10 +16,12 @@ k8s:
     disk: 50
 
   worker_nodes:
-    vcpu: 2
+    vcpu: 4
     mem: 8
     vms: 3
     disk: 50
+    libvirt_pool:
+
 
 # Network configuration
 
