--- a/vars/k8s_cluster.yml
+++ b/vars/k8s_cluster.yml
@@ -14,13 +14,14 @@ k8s:
     mem: 8
     vms: 1
     disk: 50
+    libvirt_pool: pvc1-1
 
   worker_nodes:
     vcpu: 4
     mem: 8
     vms: 3
     disk: 50
-    libvirt_pool:
+    libvirt_pool: pvc1-1
 
 
 # Network configuration
@@ -40,6 +41,7 @@ rook_ceph:
   install_rook: true
   volume_size: 50
   rook_cluster_size: 1
+  libvirt_pool: pvc1-1
 
 # Ingress controller configuration [nginx/haproxy/contour]
 
