change nginx to haproxy

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,9 @@
 [defaults]
 inventory=./inventory
 forks=10
+#remote_user
+#become_method
+#become_user
 #only gather if specified in playbooks
 #gathering = explicit
 [galaxy]
